@@ -2,9 +2,7 @@ AUX latex2html-convert-length.patch 1148 RMD160 0f73d986180941697e4ee18d85b58624
 AUX latex2html-destdir.patch 703 RMD160 2b08bb440c4aacd3b23a05cb34d56597de8fd2a5 SHA1 eae4695aa812c927060004db9fd958c7a0d0d0b8 SHA256 e2dad7784064b12c17ba9530eb54f706d057c5b399538ee1928ca38005f860e1
 AUX latex2html-extract-major-version.patch 635 RMD160 5bfc884c149a19f9f3f3608b48e77c9106edd8e0 SHA1 8c3ff25c41f68e1cafe9ba580f3f38d8b1fa28f3 SHA256 265327a28fdbec750a32fc32999625ef254ec80736f170e645e1355d51df5c04
 AUX latex2html-perl_name.patch 445 RMD160 6f93bdc394f8c240542cd6a224864c3b4b27420d SHA1 3fd8480e23e3c06b8cb9876cc82a42b61e21386b SHA256 41dcf9d9b46691c34bddbae39faccbfeadf6beb2e19a4ac18af4a186758289c9
-DIST latex2html-2002-2-1+20041025.tar.gz 1124233 RMD160 3ee05b1016fe9aad0db45bbbda6bc76e58dc3c25 SHA1 386be87f40ccdd77d4ff9621e05551f00e4d16c8 SHA256 5bb9204992d03562345a4c0371fd0f9e65e0ac0b133a91ddb4a6bdb011d2ecae
 DIST latex2html-2008.tar.gz 1133054 RMD160 a95f06253d6fc8808ffedcad7edf8235194d7756 SHA1 5e0aa47572e0c13a4c5da51e963d5496be3f86e7 SHA256 59456815a3984250c295d3d5c46b85646038db8db2735cdc0d3780cf4da337ad
-EBUILD latex2html-2002.2.1_pre20041025-r1.ebuild 2937 RMD160 23ea022fd8eca07b8c9d45a3e999c3f4791487d8 SHA1 841ac72b40fbe4cd66bd785171e6b822a5f057bc SHA256 d6ac2b381bef1b4b3ddd7ce6d5fc42cb1c443fc7c446a5f2780f3cf3595e7aea
-EBUILD latex2html-2008.ebuild 2474 RMD160 a9b9906eeb480ced201f0e8599f351f1044cfb11 SHA1 5f9030667181a1c2438d96b2ef13473b621b1fa3 SHA256 c2c159bbe0a589a5116f2bad60a0245a45bdcccaed98a126e941c057ede75a21
-MISC ChangeLog 8636 RMD160 717a21a7cc1ebed8b579fe70664025fee679bf22 SHA1 90d608433e339081bc1f647ff28f42f45e4b6e37 SHA256 a080f87f10f70b27723186925ca885373c548e92ead502807a2d1f320d2b6cde
+EBUILD latex2html-2008.ebuild 2499 RMD160 db9722a108aab5edf02347d1c0e7e36029dc522f SHA1 48305e437c2e5ae6c4a390655a62b6abbebd909b SHA256 5afea1cad0abc6d7c8f71a33d79f7c5bbfe47b6ada2217467ca48e1cc3d737e0
+MISC ChangeLog 8858 RMD160 1c4a8d4cd3ce589e000f9702418b5ba19afbb8fd SHA1 03c8d801a45bf9cd3f5d8f64104880753ba59018 SHA256 94c72282bdc3f7497b1b63517ddfdf8059f46c937ba3d983cb2e9642ab22d6f6
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
