@@ -1,6 +1,13 @@
 # ChangeLog for dev-tex/latex2html
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/latex2html/ChangeLog,v 1.48 2009/01/30 22:47:19 jer Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/latex2html/ChangeLog,v 1.50 2009/08/05 06:56:09 aballier Exp $
+
+  05 Aug 2009; Alexis Ballier <aballier@gentoo.org> latex2html-2008.ebuild:
+  assign RDEPEND explicitly
+
+  05 Aug 2009; Alexis Ballier <aballier@gentoo.org>
+  -latex2html-2002.2.1_pre20041025-r1.ebuild:
+  remove old
 
   30 Jan 2009; Jeroen Roovers <jer@gentoo.org> latex2html-2008.ebuild:
   Stable for HPPA (bug #253990).
